fixed training creation return
