# src/models/trainingModel.js
@@ -32,7 +32,10 @@ async function create(training) {
         values: [idElem],
     }
     await dbCtrl.execute(query);
-    return idElem;
+    let ret = {
+        idElemento: idElem,
+    }
+    return ret;
 }
 
 async function update(elemento, idElemento) {
